--- a/6/catalog.html
+++ b/6/catalog.html
@@ -16,7 +16,9 @@
     <div class="page-container">
       <!--хедер-->
       <header class="main-header" data-test="header">
-        <img class="logo" src="images/vector-files/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+        <a class="home" href="index.html">
+          <img class="logo" src="images/vector-files/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+        </a>
         <!--Меню сайта-->
         <nav class="navigation navigation-menu-list">
           <ul class="navigation-list menu-list">
@@ -60,7 +62,7 @@
             </a>
           </li>
           <li class="navigation-item want-here">
-            <a class="link navigation-link button-want-here" href="#">Хочу сюда!</a>
+            <a class="link button-navigation-link button-want-here " href="#">Хочу сюда!</a>
           </li>
         </ul>
       </header>
@@ -81,80 +83,88 @@
                   alt="Домой">
                 </a>
               </li>
-
               <li class="breadcrumbs-item">
                 <span class="breadcrumbs-link breadcrumbs-hotels">Гостиницы</span>
               </li>
-
             </ul>
           </section>
           <!--форма подбора-->
-          <section class="catalog-hotels" data-test="filter">
-            <h2 class="visually-hidden">Фильтры для подбора гостиниц</h2>
-            <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
-              <fieldset class="catalog-filter-group">
-                <legend class="catalog-filter-title">Инфраструктура</legend>
-                <ul class="catalog-filter-list">
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="pool" checked>
-                      Бассейн
-                    </label>
-                  </li>
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="parking" checked>
-                      Парковка
-                    </label>
-                  </li>
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="wi-fi">
-                      Wi-Fi
-                    </label>
-                  </li>
-                </ul>
+
+          <div class="main-filter">
+            <section class="catalog-hotels" data-test="filter">
+              <h2 class="visually-hidden">Фильтры для подбора гостиниц</h2>
+              <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
+                <fieldset class="catalog-filter-group">
+                  <legend class="catalog-filter-title">Инфраструктура</legend>
+                  <ul class="catalog-filter-list">
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="checkbox" name="pool" checked>
+                        Бассейн
+                      </label>
+                    </li>
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="checkbox" name="parking" checked>
+                        Парковка
+                      </label>
+                    </li>
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="checkbox" name="wi-fi">
+                        Wi-Fi
+                      </label>
+                    </li>
+                  </ul>
+                </fieldset>
+
+                <fieldset class="catalog-filter-group">
+                  <legend class="catalog-filter-title">Тип жилья</legend>
+                  <ul class="catalog-filter-list">
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="radio" name="product-group" value="hotel" checked>
+                        Гостиница
+                      </label>
+                    </li>
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="radio" name="product-group" value="motel">
+                        Мотель
+                      </label>
+                    </li>
+                    <li class="catalog-filter-item">
+                      <label class="control">
+                        <input class="control-input" type="radio" name="product-group" value="apartamenti">
+                        Апартаменты
+                      </label>
+                    </li>
+                  </ul>
+                </fieldset>
+            </section>
+
+            <section class="catalog-price">
+              <h2 class="visually-hidden">Фильтры</h2>
+              <fieldset class="catalog-price">
+                <legend class="catalog-filter-price">Стоимость, ₽ </legend>
+                <div class="set-price">
+                  <label class="price-conditions">
+                    <input class="min-price" type="text" value="0" name="min-price">
+                  </label>
+                  <label class="price-conditions">
+                    <input class="min-price" type="text" value="9000" name="max-price">
+                  </label>
+                </div>
               </fieldset>
+            </section>
 
-              <fieldset class="catalog-filter-group">
-                <legend class="catalog-filter-title">Тип жилья</legend>
-                <ul class="catalog-filter-list">
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="radio" name="product-group" value="hotel" checked>
-                      Гостиница
-                    </label>
-                  </li>
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="radio" name="product-group" value="motel">
-                      Мотель
-                    </label>
-                  </li>
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="radio" name="product-group" value="apartamenti">
-                      Апартаменты
-                    </label>
-                  </li>
-                </ul>
-              </fieldset>
-          </section>
-
-          <section class="catalog-price">
-            <h2 class="visually-hidden">Фильтры</h2>
-
-            <!-- <fieldset class="catalog-price">
-                              <p><input type="text" placeholder="От" value="0"></p>
-                              <p><input type="text" placeholder="До" value="9000"></p>
-                              <legend class="catalog-filter-price">Стоимость, ₽ </legend>
-                              не смогла разобраться с фильтрами до конца -->
-
-            <button class="button button-apply" type="submit">Применить</button>
-            <button class="button button-reset" type="reset">Сбросить</button>
-            </form>
-          </section>
-
+            <section>
+              <h2 class="filter-button visually-hidden">кнопки фильтров</h2>
+              <button class="button button-apply" type="submit">Применить</button>
+              <button class="button button-reset" type="reset">Сбросить</button>
+              </form>
+            </section>
+          </div>
         </header>
         <!--сортировка результатов поиска-->
         <div class="results-wrapper" data-test="catalog">
@@ -304,19 +314,34 @@
             <li class="footer-sosial-item">
               <a class="button sosial-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте</span>
-                <img src="images/vector-files/vk.svg" alt="Вконтакте">
+                <svg class="footer-logo-sosial" xmlns="http://www.w3.org/2000/svg" width="24" height="14"
+                  viewBox="0 0 24 14" fill="none">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z"
+                    fill="#83B3D3" />
+                </svg>
               </a>
             </li>
             <li class="footer-sosial-item">
-              <a class="button sosial-link" href="https://t.me/htmlacademy ">
-                <span class="visually-hidden">Телеграм</span>
-                <img src="images/vector-files/tg.svg" alt="Телеграм">
+              <a class=" button sosial-link" href="https://t.me/htmlacademy ">
+                <span class=" visually-hidden">Телеграм</span>
+                <svg class="footer-logo-sosial" xmlns="http://www.w3.org/2000/svg" width="18" height="17"
+                  viewBox="0 0 18 17" fill="none">
+                  <path
+                    d="M16.785 0.955705L0.840489 7.1042C-0.247661 7.54126 -0.241365 8.14828 0.640845 8.41897L4.73445 9.69597L14.2058 3.72014C14.6537 3.44766 15.0629 3.59424 14.7265 3.89281L7.05283 10.8183H7.05103L7.05283 10.8192L6.77045 15.0387C7.18413 15.0387 7.36669 14.8489 7.59871 14.625L9.58705 12.6915L13.7229 15.7464C14.4855 16.1664 15.0332 15.9506 15.2229 15.0405L17.9379 2.2453C18.2158 1.13107 17.5126 0.626562 16.785 0.955705Z"
+                    fill="#83B3D3" />
+                </svg>
               </a>
             </li>
             <li class="footer-sosial-item">
               <a class="button sosial-link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Ютуб</span>
-                <img src="images/vector-files/utube.svg" alt="Ютуб">
+                <svg class="footer-logo-sosial" xmlns="http://www.w3.org/2000/svg" width="23" height="18"
+                  viewBox="0 0 23 18" fill="none">
+                  <path
+                    d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z"
+                    fill="#83B3D3" />
+                </svg>
               </a>
             </li>
           </ul>
@@ -328,11 +353,15 @@
         <section class="footer-logo">
           <h3 class="visually-hidden">Логотип</h3>
           <span class="visually-hidden">Логотип</span>
-          <a href="https://htmlacademy.ru/">
-            <img src="images/vector-files/logo-htmlacademy.svg" alt="HTML-logo">
+          <a class="gooter-logo-link" href="https://htmlacademy.ru/">
+            <svg class="footer-logo-icon" alt="Логотип" width="115" height="33" viewBox="0 0 115 33" fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1a3.7 3.7 0 0 0-3.4-2.1c-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7a4.9 4.9 0 0 0-3.9-1.8c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8a5 5 0 0 0-3.9-1.9c-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 17.9a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z">
+              </path>
+            </svg>
           </a>
         </section>
-
       </footer>
     </div>
   </body>
