--- a/index.html
+++ b/index.html
@@ -209,6 +209,31 @@
           </a>
         </section>
       </footer>
+
+      <div class="modal-container">
+        <div class="modal modal-auth">
+          <button class="modal-close-button">
+            <span class="visually-hidden">Закрыть</span>
+          </button>
+          <section class="modal-content">
+            <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+            <form class="serch-hotel-form" action="https://echo.htmlacademy.ru/" method="post">
+
+            </form>
+          </section>
+
+
+
+
+
+
+
+
+
+        </div>
+
+      </div>
+
     </body>
   </div>
 
