--- a/catalog.html
+++ b/catalog.html
@@ -80,7 +80,6 @@
                     Главная
                   </span>
                 </a>
-                </a>
               </li>
               <li class="breadcrumbs-item">
                 <span class="breadcrumbs-link breadcrumbs-hotels">Гостиницы</span>
@@ -92,7 +91,7 @@
           <div class="main-filter">
             <section class="catalog-hotels" data-test="filter">
               <h2 class="visually-hidden">Фильтры для подбора гостиниц</h2>
-              <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
+               <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="get">
                 <fieldset class="catalog-filter-group">
                   <legend class="catalog-filter-title">Инфраструктура:</legend>
                   <ul class="catalog-filter-list">
@@ -182,7 +181,8 @@
                   <h2 class="filter-button visually-hidden">кнопки фильтров</h2>
                   <button class="button button-apply" type="submit">Применить</button>
                   <button class="button button-reset" type="reset">Сбросить</button>
-              </form>
+                  </section>
+               </form>
             </section>
             </section>
           </div>
