--- a/modal.html
+++ b/modal.html
@@ -212,7 +212,7 @@
         </section>
       </footer>
 
-      <!--модальное окно
+      <!--модальное окно-->
 
         <div class="modal-container
           <div class="modal modal-search data-test="modal">
@@ -294,8 +294,11 @@
               <span class="visually-hidden">Закрыть</span>
             </button>
           </div>
+        </div>
 
-      -->
+
+
+
 
     </body>
   </div>
