--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
         <section class="services">
           <ul class="services-list">
             <li class="services-item residence">
-              <h3>ЖИЛЬЁ</h3>
+              <h3 class="title">ЖИЛЬЁ</h3>
               <p class="text">Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
             </li>
             <li class="services-item food">
-              <h3>ЕДА</h3>
+              <h3 class="title">ЕДА</h3>
               <p class="text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="services-item presents">
-              <h3>СУВЕНИРЫ</h3>
+              <h3 class="title">СУВЕНИРЫ</h3>
               <p class="text">Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
